<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutFirst"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/btn_background">

        <LinearLayout
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvHeadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/about_us"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/little_gradient"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_close"
            tools:ignore="VectorDrawableCompat" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/app_desc"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:justificationMode="inter_word"/>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/app_desc_img"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:justificationMode="inter_word"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/app_desc_policy"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:justificationMode="inter_word"/>

                <View
                    android:id="@+id/view4"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/little_gradient" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/open_source_project"
                    android:textColor="#c125ff"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/oprn_source_desc"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:justificationMode="inter_word"/>

                <View
                    android:id="@+id/view6"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/little_gradient" />

                <LinearLayout
                    android:id="@+id/sourceCodeLink"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvSourceCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/download_source_code"
                        android:textColor="#0088FF"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:nextFocusRight="@id/tvSourceCode"
                        app:srcCompat="@drawable/logo_github" />
                </LinearLayout>

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/little_gradient" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="left">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Follow Me:"
                        android:padding="10dp"
                        android:textSize="18sp"
                        android:textColor="#E91E63"
                        android:textStyle="bold"/>

                    <ImageView
                        android:id="@+id/insta"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        android:layout_marginEnd="12dp"
                        app:srcCompat="@drawable/instagram" />

                    <ImageView
                        android:id="@+id/youtube"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        app:srcCompat="@drawable/youtube" />
                </LinearLayout>

                <View
                    android:id="@+id/view7"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@drawable/little_gradient" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="left"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/myVersion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Current Version"
                        android:padding="10dp"
                        android:textSize="14sp"
                        android:textColor="#676767"
                        android:textStyle="bold"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>