<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:theme="@style/ToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:titleTextColor="#fff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/icon_calculator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/firstVl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@drawable/border_stroke"
                    android:ems="10"
                    android:hint="@string/first_value"
                    android:inputType="numberDecimal"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/secondVl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/border_stroke"
                    android:ems="10"
                    android:hint="@string/second_value"
                    android:inputType="numberDecimal"
                    android:padding="10dp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/resultVl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_stroke"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/result"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/buttonPlus"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/layout_hover"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_plus" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonSubtract"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@drawable/layout_hover"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_subtract" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/buttonMultiply"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/layout_hover"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_multiply" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonDivide"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@drawable/layout_hover"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_divide" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/clrButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/layout_hover"
            android:text="CLEAR"
            android:textSize="14sp" />

        <Button
            android:id="@+id/per_cal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/layout_hover"
            android:text="Percentage Calculator"
            android:textSize="14sp" />

        <Button
            android:id="@+id/age_cal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/layout_hover"
            android:text="Age Calculator"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>